--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,14 @@ tagline:      Observations and Tools Relating to Software Architecture
 baseurl:      ""
 locale:       "en"
 
+# Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
+excerpt_length: 50
+
+# Whether or not to show an excerpt for every blog post in the feed page
+feed_show_excerpt: true
+
+
+
 # Gems
 gems:
   - jekyll-paginate
